// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match basic snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 5,
      "marginTop": 5,
    }
  }
>
  <Text
    style={
      {
        "color": "#ffd600",
        "fontSize": 41.0958904109589,
        "fontWeight": "bold",
        "width": "50%",
      }
    }
  >
    Test field
  </Text>
  <View
    style={
      {
        "width": "30%",
      }
    }
  >
    <View
      style={
        {
          "placeholderTextColor": "#ffffff",
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 6,
            },
            {
              "backgroundColor": "#303030",
              "borderColor": "#31adff",
              "borderRadius": 4,
              "borderWidth": 1,
            },
            undefined,
          ]
        }
        testID="text-input-outline"
      />
      <View>
        <View
          style={
            [
              {
                "paddingBottom": 0,
              },
              {
                "minHeight": 56,
                "paddingTop": 8,
              },
            ]
          }
        >
          <TextInput
            autoCapitalize="none"
            editable={true}
            keyboardType="default"
            maxFontSizeMultiplier={1.5}
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Test field"
            placeholderTextColor="rgba(73, 69, 79, 1)"
            selectionColor="#ffd600"
            style={
              [
                {
                  "margin": 0,
                  "zIndex": 1,
                },
                {
                  "height": 48,
                },
                {
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": undefined,
                  "letterSpacing": 0.15,
                  "lineHeight": undefined,
                  "paddingHorizontal": 16,
                  "textAlign": "left",
                  "textAlignVertical": "center",
                },
                false,
                [
                  {},
                ],
                undefined,
              ]
            }
            testID="text-input-outlined"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
    </View>
    <Text
      style={
        {
          "color": "#ff0000",
          "fontSize": 20.54794520547945,
        }
      }
    >
      test error
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#ababab",
        "fontSize": 30.821917808219176,
        "fontWeight": "bold",
        "marginLeft": 10,
      }
    }
  >
    players
  </Text>
</View>
`;

exports[`should match snapshot with non-user input 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 5,
      "marginTop": 5,
    }
  }
>
  <Text
    style={
      {
        "color": "#ffd600",
        "fontSize": 41.0958904109589,
        "fontWeight": "bold",
        "width": "50%",
      }
    }
  >
    Test field
  </Text>
  <View
    style={
      {
        "width": "30%",
      }
    }
  >
    <Text>
      Test display
    </Text>
    <Text
      style={
        {
          "color": "#ff0000",
          "fontSize": 20.54794520547945,
        }
      }
    >
      test error
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#ababab",
        "fontSize": 30.821917808219176,
        "fontWeight": "bold",
        "marginLeft": 10,
      }
    }
  >
    players
  </Text>
</View>
`;

exports[`should match snapshot without unit 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 5,
      "marginTop": 5,
    }
  }
>
  <Text
    style={
      {
        "color": "#ffd600",
        "fontSize": 41.0958904109589,
        "fontWeight": "bold",
        "width": "50%",
      }
    }
  >
    Test field
  </Text>
  <View
    style={
      {
        "width": "50%",
      }
    }
  >
    <View
      style={
        {
          "placeholderTextColor": "#ffffff",
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 6,
            },
            {
              "backgroundColor": "#303030",
              "borderColor": "#31adff",
              "borderRadius": 4,
              "borderWidth": 1,
            },
            undefined,
          ]
        }
        testID="text-input-outline"
      />
      <View>
        <View
          style={
            [
              {
                "paddingBottom": 0,
              },
              {
                "minHeight": 56,
                "paddingTop": 8,
              },
            ]
          }
        >
          <TextInput
            autoCapitalize="none"
            editable={true}
            keyboardType="default"
            maxFontSizeMultiplier={1.5}
            multiline={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="Test field"
            placeholderTextColor="rgba(73, 69, 79, 1)"
            selectionColor="#ffd600"
            style={
              [
                {
                  "margin": 0,
                  "zIndex": 1,
                },
                {
                  "height": 48,
                },
                {
                  "paddingBottom": 0,
                  "paddingTop": 0,
                },
                {
                  "color": "rgba(28, 27, 31, 1)",
                  "fontFamily": "System",
                  "fontSize": 16,
                  "fontWeight": undefined,
                  "letterSpacing": 0.15,
                  "lineHeight": undefined,
                  "paddingHorizontal": 16,
                  "textAlign": "left",
                  "textAlignVertical": "center",
                },
                false,
                [
                  {},
                ],
                undefined,
              ]
            }
            testID="text-input-outlined"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
      </View>
    </View>
    <Text
      style={
        {
          "color": "#ff0000",
          "fontSize": 20.54794520547945,
        }
      }
    >
      test error
    </Text>
  </View>
</View>
`;
